--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,11 +4,19 @@
         <meta charset="UTF-8" />
         <link rel="icon" type="image/svg+xml" href="/vite.svg" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta name="color-scheme" content="light dark" />
-        <title>Vite + Preact</title>
+        <link
+            rel="stylesheet"
+            href="https://fonts.googleapis.com/css?family=Roboto:300,400,500"
+        />
+        <title>Vite + React + TS</title>
+        <style type="text/css">
+            body {
+                margin: 0;
+            }
+        </style>
     </head>
     <body>
-        <div id="app"></div>
-        <script type="module" src="/src/index.tsx"></script>
+        <div id="root"></div>
+        <script type="module" src="/src/main.tsx"></script>
     </body>
 </html>
